@@ -1,2 +1,0 @@
-Site URL: http://hentaihaven.org/
-Contact: http://hentaihaven.org/contact-us/
