@@ -1,3 +1,0 @@
-Site URL: https://streamxxx.tv/
-Contact: webwarez@live.it
-Contact (Telegram): https://t.me/streamxxx
