@@ -1,2 +1,0 @@
-Site URL: http://xxxstreams.org/
-Contact: http://freexxxstreams.chatango.com/
