@@ -1,7 +1,6 @@
 """
     Cumination
-    Copyright (C) 2015 Whitecream
-    Copyright (C) 2020 Team Cumination
+    Copyright (C) 2022 Team Cumination
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -18,6 +17,8 @@
 """
 
 import re
+import xbmc
+from six.moves import urllib_parse
 from resources.lib import utils
 from resources.lib.adultsite import AdultSite
 
@@ -38,7 +39,14 @@ def List(url):
     match = re.compile(r'boxtitle">.+?href="([^"]+).+?title="([^"]+).+?src="([^"]+)', re.DOTALL | re.IGNORECASE).findall(listhtml)
     for videopage, name, img in match:
         name = utils.cleantext(name)
-        site.add_download_link(name, videopage, 'Playvid', img, name)
+
+        contextmenu = []
+        contexturl = (utils.addon_sys
+                          + "?mode=" + str('freeomovie.Lookupinfo')
+                          + "&url=" + urllib_parse.quote_plus(videopage))
+        contextmenu.append(('[COLOR deeppink]Lookup info[/COLOR]', 'RunPlugin(' + contexturl + ')'))
+
+        site.add_download_link(name, videopage, 'Playvid', img, name, contextm=contextmenu)
 
     nextp = re.compile(r'''navigation'>.+?rel="next"\s*href="([^"]+)''', re.DOTALL | re.IGNORECASE).search(listhtml)
     if nextp:
@@ -62,11 +70,47 @@ def Search(url, keyword=None):
 @site.register()
 def Cat(url):
     listhtml = utils.getHtml(url, '')
-    match = re.compile(r'<li class="cat-item cat-item-\d+"><a href="([^"]+)"[^>]*>([^<]+)<', re.DOTALL | re.IGNORECASE).findall(listhtml)
+    match = re.compile(r'<li class="cat-item cat-item-\d+"><a href="([^"]+)"[^>]?>([^<]+)<', re.DOTALL | re.IGNORECASE).findall(listhtml)
     for catpage, name in match:
         name = utils.cleantext(name)
         site.add_dir(name, catpage, 'List', '', '')
     utils.eod()
+
+
+@site.register()
+def Lookupinfo(url):
+    try:
+        listhtml = utils.getHtml(url)
+    except:
+        return None
+
+    infodict = {}
+
+    listhtml = re.compile("Category:(.*?)<!--/videocont-->", re.DOTALL | re.IGNORECASE).findall(listhtml)[0]
+
+    categories = re.compile('(category/[^"]+)" rel="category tag">([^<]+)', re.DOTALL | re.IGNORECASE).findall(listhtml)
+    if categories:
+        for url, cat in categories:
+            cat = "Cat - " + cat.strip()
+            infodict[cat] = site.url + url
+
+    tags = re.compile('(tag/[^"]+)" rel="tag">([^<]+)', re.DOTALL | re.IGNORECASE).findall(listhtml)
+    if tags:
+        for url, tag in tags:
+            tag = "Tag - " + tag.strip()
+            infodict[tag] = site.url + url
+
+    if infodict:
+        selected_item = utils.selector('Choose item', infodict, show_on_one=True)
+        if not selected_item:
+            return
+        contexturl = (utils.addon_sys
+                      + "?mode=" + str('freeomovie.List')
+                      + "&url=" + urllib_parse.quote_plus(selected_item))
+        xbmc.executebuiltin('Container.Update(' + contexturl + ')')
+    else:
+        utils.notify('Notify', 'No categories or tags found for this video')
+    return
 
 
 @site.register()
