@@ -1,6 +1,8 @@
 [B]Version 1.1.58[/B]
-freeomovie - fix categories
+freeomovie - fix categories, added Lookup info contextmenu
 voyeur-house.life - fixed
 voyeurhouse.life - new site
+xmoviesforyou - added Lookup info contextmenu
 porn tv network - removed
 daftsex - removed
+streamxxx - removed
